--- a/sass/libs/_animation.scss
+++ b/sass/libs/_animation.scss
@@ -3,6 +3,8 @@
 .loader {
   position: absolute;
   background-color: $lighter;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   height: 100%;
   max-width: 1600px;
