--- a/sass/style.css
+++ b/sass/style.css
@@ -500,6 +500,8 @@ footer, .introduction, .bouton__nav {
 .loader {
   position: absolute;
   background-color: #f3f3f3;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   height: 100%;
   max-width: 1600px;
