--- a/sass/style.css
+++ b/sass/style.css
@@ -14,7 +14,7 @@
   height: 100%;
 }
 
-.pages, .nav li i, main .title {
+.pages, main .title {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1080,7 +1080,6 @@ a {
 
 ul li {
   margin: 0;
-  padding: 5px;
   font-weight: bolder;
 }
 
