--- a/sass/style.css
+++ b/sass/style.css
@@ -1,4 +1,4 @@
-.loader, .spinner, .welcome, .introduction__search-box, .introduction__present, .bouton, .primary-content__restaurants, .container {
+.loader, .spinner, .welcome, .introduction__search-box, .introduction__present, .bouton, .bouton__round, .primary-content__restaurants, .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +32,7 @@
           align-items: center;
 }
 
-footer, .introduction, .bouton__nav {
+footer, .introduction {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -750,21 +750,33 @@ footer h2 {
 }
 
 .bouton__nav {
-  padding: 20px;
-  font-size: 16px;
-  font-weight: bolder;
-  border-radius: 30px;
   color: #000;
   background-color: #f3f3f3;
+  border-radius: 30px;
   width: 350px;
   height: 60px;
   margin: 10px 0;
-  z-index: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
 }
 
 .bouton__nav:hover {
   opacity: 0.7;
+}
+
+.bouton__nav i {
+  margin-left: 35px;
+  margin-right: 35px;
+  font-size: 16px;
+}
+
+.bouton__nav i:hover {
+  color: #9356DC;
 }
 
 .bouton__round {
@@ -775,24 +787,8 @@ footer h2 {
   color: #fff;
   font-weight: bolder;
   border: none;
-  position: relative;
-  left: -30px;
-  z-index: 2;
-  text-align: center;
-  line-height: 25px;
-}
-
-nav i {
-  color: #8d8d8d;
-  padding-left: 95px;
-  padding-right: 20px;
-  padding-top: 20px;
   position: absolute;
-  z-index: 3;
-}
-
-nav i:hover {
-  color: #9356DC;
+  left: -10px;
 }
 
 .heart__checked {
@@ -1082,6 +1078,7 @@ a {
 ul li {
   margin: 0;
   font-weight: bolder;
+  padding-left: 5px;
 }
 
 u {
