--- a/sass/libs/_mediaqueries.scss
+++ b/sass/libs/_mediaqueries.scss
@@ -6,10 +6,11 @@ body {
         gap: 10px;
         max-width: 1600px;
         grid-template-areas: '1 . 2'
-                    '4 4 3'
+                    '4 4 4'
+                    '3 3 3'
                     '5 5 5'
                     '6 6 6';
-                    grid-auto-rows: 1fr auto auto 2fr;
+                    grid-auto-rows: 1fr auto auto auto 2fr;
                     grid-template-columns: auto auto auto; 
         header { 
             margin-left: $pad;
@@ -25,7 +26,7 @@ body {
             grid-row: 1;
             &__present {
                 grid-area: 4;
-                grid-column: 1/3;
+                grid-column: 1/4;
                 grid-row: 2;
                 display: flex;
                 flex-direction: column;
@@ -35,23 +36,26 @@ body {
         }
         nav {
             grid-area: 3;
-            grid-column: 3/4;
-            grid-row: 2;
+            grid-column: 1/4;
+            grid-row: 3;
             display: flex;
             flex-direction: column;
-
+            ul {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;}
         }
         .primary-content {
             grid-area: 5;
             grid-column: 1/4;
-            grid-row: 3; 
+            grid-row: 4; 
             background-color: $white;
             margin-bottom: auto;
         }
         footer {
             grid-area: 6;
             grid-column: 1/4;
-            grid-row: 4;
+            grid-row: 5;
             align-items: start;
             width: 100%;
             height: 100%;
@@ -79,8 +83,9 @@ body {
             max-width: 1600px;
             grid-template-areas: '7 . .'
                         '8 8 8'
+                        '9 9 9'
                         '9 9 9';
-                        grid-auto-rows: 1fr auto auto 2fr;
+                        grid-auto-rows: 1fr auto auto auto 2fr;
                         grid-template-columns: auto auto auto;  
         .pages {
             grid-area: 7;
@@ -93,7 +98,7 @@ body {
         main {
             grid-area: 8;
             position: relative;
-            grid-column: 1/3;
+            grid-column: 1/4;
             grid-row: 2;
                 img {
                     object-fit: cover;
@@ -109,15 +114,14 @@ body {
             }
         .container {
             grid-area: 9;
-            grid-row: 3;
-            grid-column: 1/3;
+            grid-row: 3/4;
+            grid-column: 1/4;
             display: flex;
             flex-wrap: wrap;
-            width: 100%;
-            height: auto;
             justify-content: center;
             align-items: flex-start;
-            gap: 5px;
+            width: 100%;
+            height: auto;
             background-color: $white;
             .content {
                 width: 33%;
