--- a/sass/style.css
+++ b/sass/style.css
@@ -54,14 +54,14 @@ footer, .introduction {
   position: relative;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 616px) {
   body {
     display: -ms-grid;
     display: grid;
     gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '1 . 2' '4 4 3' '5 5 5' '6 6 6';
-    grid-auto-rows: 1fr auto auto 2fr;
+        grid-template-areas: '1 . 2' '4 4 4' '3 3 3' '5 5 5' '6 6 6';
+    grid-auto-rows: 1fr auto auto auto 2fr;
     -ms-grid-columns: auto auto auto;
         grid-template-columns: auto auto auto;
   }
@@ -91,11 +91,11 @@ footer, .introduction {
   body .introduction__present {
     -ms-grid-row: 2;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
+    -ms-grid-column-span: 3;
     grid-area: 4;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 2;
     grid-row: 2;
     display: -webkit-box;
@@ -113,14 +113,15 @@ footer, .introduction {
             align-items: center;
   }
   body nav {
-    -ms-grid-row: 2;
-    -ms-grid-column: 3;
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-area: 3;
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-column: 3/4;
-    -ms-grid-row: 2;
-    grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+    -ms-grid-row: 3;
+    grid-row: 3;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -129,29 +130,41 @@ footer, .introduction {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  body nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
   body .primary-content {
-    -ms-grid-row: 3;
+    -ms-grid-row: 4;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-area: 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
-    -ms-grid-row: 3;
-    grid-row: 3;
+    -ms-grid-row: 4;
+    grid-row: 4;
     background-color: #fff;
     margin-bottom: auto;
   }
   body footer {
-    -ms-grid-row: 4;
+    -ms-grid-row: 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-area: 6;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
-    -ms-grid-row: 4;
-    grid-row: 4;
+    -ms-grid-row: 5;
+    grid-row: 5;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
@@ -194,8 +207,8 @@ footer, .introduction {
     display: grid;
     gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '1 . 2' '4 4 3' '5 5 5' '6 6 6';
-    grid-auto-rows: 1fr auto auto 2fr;
+        grid-template-areas: '1 . 2' '4 4 4' '3 3 3' '5 5 5' '6 6 6';
+    grid-auto-rows: 1fr auto auto auto 2fr;
     -ms-grid-columns: auto auto auto;
         grid-template-columns: auto auto auto;
   }
@@ -225,11 +238,11 @@ footer, .introduction {
   body .introduction__present {
     -ms-grid-row: 2;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
+    -ms-grid-column-span: 3;
     grid-area: 4;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 2;
     grid-row: 2;
     display: -webkit-box;
@@ -247,14 +260,15 @@ footer, .introduction {
             align-items: center;
   }
   body nav {
-    -ms-grid-row: 2;
-    -ms-grid-column: 3;
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-area: 3;
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-column: 3/4;
-    -ms-grid-row: 2;
-    grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+    -ms-grid-row: 3;
+    grid-row: 3;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -263,29 +277,41 @@ footer, .introduction {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  body nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
   body .primary-content {
-    -ms-grid-row: 3;
+    -ms-grid-row: 4;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-area: 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
-    -ms-grid-row: 3;
-    grid-row: 3;
+    -ms-grid-row: 4;
+    grid-row: 4;
     background-color: #fff;
     margin-bottom: auto;
   }
   body footer {
-    -ms-grid-row: 4;
+    -ms-grid-row: 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-area: 6;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
-    -ms-grid-row: 4;
-    grid-row: 4;
+    -ms-grid-row: 5;
+    grid-row: 5;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
@@ -322,14 +348,14 @@ footer, .introduction {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 616px) {
   body {
     display: -ms-grid;
     display: grid;
     gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '7 . .' '8 8 8' '9 9 9';
-    grid-auto-rows: 1fr auto auto 2fr;
+        grid-template-areas: '7 . .' '8 8 8' '9 9 9' '9 9 9';
+    grid-auto-rows: 1fr auto auto auto 2fr;
     -ms-grid-columns: auto auto auto;
         grid-template-columns: auto auto auto;
   }
@@ -357,8 +383,8 @@ footer, .introduction {
     grid-area: 8;
     position: relative;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 2;
     grid-row: 2;
   }
@@ -376,28 +402,29 @@ footer, .introduction {
   }
   body .container {
     -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-area: 9;
     -ms-grid-row: 3;
-    grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 100%;
-    height: auto;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    gap: 5px;
+    width: 100%;
+    height: auto;
     background-color: #fff;
   }
   body .container .content {
@@ -424,8 +451,8 @@ footer, .introduction {
     display: grid;
     gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '7 . .' '8 8 8' '9 9 9';
-    grid-auto-rows: 1fr auto auto 2fr;
+        grid-template-areas: '7 . .' '8 8 8' '9 9 9' '9 9 9';
+    grid-auto-rows: 1fr auto auto auto 2fr;
     -ms-grid-columns: auto auto auto;
         grid-template-columns: auto auto auto;
   }
@@ -453,8 +480,8 @@ footer, .introduction {
     grid-area: 8;
     position: relative;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 2;
     grid-row: 2;
   }
@@ -472,28 +499,29 @@ footer, .introduction {
   }
   body .container {
     -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-area: 9;
     -ms-grid-row: 3;
-    grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 100%;
-    height: auto;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    gap: 5px;
+    width: 100%;
+    height: auto;
     background-color: #fff;
   }
   body .container .content {
